# gametest

./: CMakeLists.txt  run.bat
data/: bow.ply  buildings.ply  cube.ply  floor.ply  monkey.ply  simple.fragment  skybox.ply  target.ply  test.ply  wood.ppm
data/blender files/: skybox.blend  skybox.blend1  target.blend  target.blend1
glwrap/: CMakeLists.txt  drawable.h  object.h  shaders.cpp  shaders.h  texture.cpp  texture.h  window.cpp
glwrap/mesh/: kdmesh.h  linemesh.h  mesh.cpp  mesh.h  sphere.h
src/: events.cpp  events.h  input_state.cpp  input_state.h  main.cpp  player.cpp  player.h
